--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -10,7 +10,7 @@
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
 #
 # You can start the mysql server with bin/mysqld_safe_run_as_user or let supervisord 
-# do his job: bin/supervisord or  bin/supervisord -e debug -n to check that everything 
+# do its job: bin/supervisord or  bin/supervisord -e debug -n to check that everything 
 # is fine. Supervisord is started by user crontab on reboot. There are more crontab 
 # entries for backups (end of file).
 # 
@@ -18,7 +18,7 @@
 # ----------
 #
 # Install depencencies:
-#    $ aptitude install wget python libapache2-mod-fcgid php5-cgi apache2 apache2-mpm-worker apache2-suexec mysql-server-5.1
+#    $ aptitude install git wget python libapache2-mod-fcgid php5-cgi apache2 apache2-mpm-worker apache2-suexec mysql-server-5.1
 #
 # Load apache modules:
 #    $ a2enmod php5
@@ -28,7 +28,7 @@
 # To run the buildout, do the following as root:
 #    $ adduser ${userdata:name} --home ${buildout:directory}" 
 #    $ cd /var/www
-#    $ git clone https://buildout/lamp/trunk ${userdata:servername}
+#    $ git clone git@github.com:joka/LAMP-buildout.git ${userdata:servername}
 #    $ cd ${userdata:servername}
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
@@ -36,7 +36,7 @@
 # Update
 # -------------
 #
-# To make changes you cann edit the options on top of this file or the config template files (./templates)
+# To make changes you can edit the options on top of this file and the config template files (./templates)
 # Then rerun the buildout part you have changed:
 #    $ bin/buildout -Nc buildout-common.cfg install 
 # You can change the config files directly (see part generated-config-files), but all changes are lost 
