--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -2,7 +2,7 @@
 # ======================================
 # 
 # This buildout configures a LAMP virtual host with php fcgi support and mysql
-# database server. 
+# database server. It's tested with Debian 6.0 and Ubuntu 10.4. 
 # The configuration is fully contained within this buildout. Hostnames, ports
 # and common options can be changed in the buildout sections at the top of
 # of this file.
