--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -21,9 +21,9 @@
 #    $ aptitude install git wget python libapache2-mod-fcgid php5-cgi apache2 apache2-mpm-worker apache2-suexec mysql-server-5.1
 #
 # Load apache modules:
-#    $ a2enmod php5
 #    $ a2enmod fcgid
 #    $ a2enmod suexec 
+#    $ a2enmod ssl
 #
 # To run the buildout, do the following as root:
 #    $ adduser ${userdata:name} --home ${buildout:directory}" 
@@ -70,12 +70,12 @@ parts =
     yii
     omelette
     supervisor
-    vhost-install
     automysqlbackup-conf
     automysqlbackup
     crontab_reboot                                                                               
     crontab_mysql_backup_daily                                                                          
     crontab_mysql_backup_weekly                                                                          
+    vhost-install
 
 [userdata]
 name = test
@@ -83,6 +83,7 @@ servername = localhost
 serveralias = localhost
 serveradmin = admin@test.de
 mysql_root_pwd = password
+ssl_cert = ${buildout:directory}/etc/${userdata:servername}.pem
 
 [ports] 
 mysql = 9003
@@ -167,12 +168,12 @@ input = ${buildout:directory}/templates/mysqld_safe_run_as_user.in
 output = ${buildout:directory}/bin/mysqld_safe_run_as_user
 
 [automysqlbackup]
-recipe = plone.recipe.command
-stop-on-error = false
-command =  
-    wget http://downloads.sourceforge.net/project/automysqlbackup/AutoMySQLBackup/AutoMySQLBackup%20VER%202.5/automysqlbackup-2.5.1-01.sh
-    mv automysqlbackup-2.5.1-01.sh bin/automysqlbackup
-    chmod a+x bin/automysqlbackup 
+recipe = hexagonit.recipe.download
+download-only = true
+url = http://downloads.sourceforge.net/project/automysqlbackup/AutoMySQLBackup/AutoMySQLBackup%20VER%202.5/automysqlbackup-2.5.1-01.sh 
+ignore-existing = true
+destination = ${buildout:directory}/bin
+filename = automysqlbackup
 
 ##############################################################################  
 #Access rights, Directories, installed php scripts
@@ -199,6 +200,7 @@ command =
 #protect config files
     chmod 440 ${buildout:directory}/etc/php.ini
     chmod 440 ${buildout:directory}/etc/vhost.conf
+    chattr -i -V ${buildout:directory}/bin/php-fcgi-starter
     chown ${userdata:name}:${userdata:name} ${buildout:directory}/bin/php-fcgi-starter
     chattr +i -V ${buildout:directory}/bin/php-fcgi-starter
 update-command = ${userdirs:command}
@@ -207,6 +209,7 @@ update-command = ${userdirs:command}
 recipe = hexagonit.recipe.download
 url =  http://yii.googlecode.com/files/yii-1.1.7.r3135.tar.gz
 destination = ${buildout:directory}/docs
+ignore-existing = true
 strip-top-level-dir = true
 
 #######################################################################################
@@ -226,6 +229,10 @@ recipe = plone.recipe.command
 command = 
     ln -s ${buildout:directory}/etc/vhost.conf ${install-paths:vhosts}/${userdata:servername}
     a2ensite ${userdata:servername}
+    echo
+    echo "To install a self-certified root certificat please run:"
+    echo /usr/sbin/make-ssl-cert /usr/share/ssl-cert/ssleay.cnf ${userdata:ssl_cert}
+    echo
 location = 
 	${install-paths:vhosts}/${userdata:servername}
 	${install-paths:vhosts_enabled}/${userdata:servername}
@@ -240,8 +247,7 @@ command =
     sudo -u ${userdata:name} ${buildout:directory}/bin/mysqld_safe_run_as_user &
     ${buildout:directory}/bin/mysqladmin -u root password '${userdata:mysql_root_pwd}'
     kill -TERM  $(cat ${buildout:directory}/var/mysql.pid)
-    #echo "${buildout:directory}/parts/mysql/bin/mysqladmin -u root password 'new-password'"
-#update-command=${mysql_install_db:command}
+update-command=${mysql_install_db:command}
 
 #Supervisor to start the mysql server
 [omelette]
