--- a/templates/vhost.conf.in
+++ b/templates/vhost.conf.in
@@ -1,24 +1,63 @@
 <VirtualHost *:80>
-    ServerAdmin ${userdata:serveradmin}
     ServerName  ${userdata:servername}
     ServerAlias ${userdata:serveralias}
+    ServerAdmin ${userdata:serveradmin}
+
     SuexecUserGroup ${userdata:name} ${userdata:name}
     AddHandler fcgid-script .php
+
     DocumentRoot "${buildout:directory}/docs"
     DirectoryIndex index.htm index.html index.php
-<Directory />
-    Options FollowSymLinks
-    AllowOverride None
-</Directory>
-<Directory "${buildout:directory}/docs">
-    Options Indexes MultiViews FollowSymLinks +ExecCGI
-    FCGIWrapper ${buildout:directory}/bin/php-fcgi-starter .php
-    Order allow,deny
-    allow from all
-</Directory>
-ErrorLog ${buildout:directory}/logs/error.log
-LogLevel warn
-CustomLog ${buildout:directory}/logs/access.log combined
-ServerSignature On
+
+    <Directory />
+        Options  -Indexes FollowSymLinks
+        AllowOverride None
+    </Directory>
+
+    <Directory "${buildout:directory}/docs">
+        Options -Indexes MultiViews FollowSymLinks +ExecCGI
+        FCGIWrapper ${buildout:directory}/bin/php-fcgi-starter .php
+        Order allow,deny
+        allow from all
+    </Directory>
+    
+    ErrorLog ${buildout:directory}/logs/error.log
+    LogLevel warn
+    CustomLog ${buildout:directory}/logs/access.log combined
+    ServerSignature On
+
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName  ${userdata:servername}
+    ServerAlias ${userdata:serveralias}
+    ServerAdmin ${userdata:serveradmin}
+
+    SuexecUserGroup ${userdata:name} ${userdata:name}
+    AddHandler fcgid-script .php
+
+    DocumentRoot "${buildout:directory}/docs"
+    DirectoryIndex index.htm index.html index.php
+
+    <Directory />
+        Options -Indexes FollowSymLinks
+        AllowOverride None
+    </Directory>
+
+    <Directory "${buildout:directory}/docs">
+        Options -Indexes MultiViews FollowSymLinks +ExecCGI
+        FCGIWrapper ${buildout:directory}/bin/php-fcgi-starter .php
+        Order allow,deny
+        allow from all
+    </Directory>
+    
+    ErrorLog ${buildout:directory}/logs/error.log
+    LogLevel warn
+    CustomLog ${buildout:directory}/logs/access.log combined
+    ServerSignature On
+ 
+    SSLEngine on
+    SSLCertificateFile ${userdata:ssl_cert}
+
 </VirtualHost>
 
