right github link

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -28,7 +28,7 @@
 # To run the buildout, do the following as root:
 #    $ adduser ${userdata:name} --home ${buildout:directory}" 
 #    $ cd /var/www
-#    $ git clone git@github.com:joka/LAMP-buildout.git ${userdata:servername}
+#    $ git clone https://joka@github.com/joka/LAMP-buildout.git ${userdata:servername}
 #    $ cd ${userdata:servername}
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
