--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -32,6 +32,8 @@
 #    $ cd ${userdata:servername}
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
+#    # rerun to be safe:
+#    $ bin/buildout -Nc buildout-common.cfg
 #
 # Update
 # -------------
