--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -199,6 +199,8 @@ command =
     chmod 550 /${buildout:directory}/etc
     chmod a+x /${buildout:directory}/bin/*
     chown ${userdata:name}:${userdata:name} ${buildout:directory}/etc/php.ini
+#take care supervisor pidproxy  is executalbe
+    chmod a+x ${supervisor:pp}
 #protect config files
     chmod 440 ${buildout:directory}/etc/php.ini
     chmod 440 ${buildout:directory}/etc/vhost.conf
