--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -187,7 +187,7 @@ stop-on-error = false
 command =  
 #make dirs
     mkdir -p ${buildout:directory}/etc
-    mkdir ${buildout:directory}/docs
+    mkdir ${buildout:directory}/htdocs
     mkdir ${buildout:directory}/logs
     mkdir ${buildout:directory}/tmp
     mkdir ${buildout:directory}/bin
@@ -212,7 +212,7 @@ update-command = ${userdirs:command}
 [yii]
 recipe = hexagonit.recipe.download
 url =  http://yii.googlecode.com/files/yii-1.1.7.r3135.tar.gz
-destination = ${buildout:directory}/docs
+destination = ${buildout:directory}/htdocs
 ignore-existing = true
 strip-top-level-dir = true
 
