disable yii download

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -69,7 +69,7 @@ parts =
     mysql-admin
     userdirs
     mysql_install_db
-    yii
+#    yii
     omelette
     supervisor
     automysqlbackup-conf
