php modules dir

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -104,6 +104,7 @@ logrotate =  ${buildout:directory}/parts/logrotate.conf
 [binaries]
 mysql= /usr/bin
 php = /usr/bin
+php_modules = /usr/lib/php5/20090626
 
 ##############################################################################  
 # Config files 
