--- a/templates/php.ini.in
+++ b/templates/php.ini.in
@@ -1337,3 +1337,9 @@ soap.wsdl_cache_ttl=86400
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+;;;;;;;;;;;;;;;;;;;;;;
+;; PDO               ;
+;;;;;;;;;;;;;;;;;;;;;;
+
+pdo_mysql.default_socket = ${mycnf:sock}
