--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -1,7 +1,7 @@
 # LAMP FCGI configuration buildout
 # ======================================
 # 
-# This buildout configures a LAMP virtual host with php fcgi support and mysql
+# This buildout configures a LAMP virtual host with fcgi, SSL and a user driven mysql
 # database server. It's tested with Debian 6.0 and Ubuntu 10.4. 
 # The configuration is fully contained within this buildout. Hostnames, ports
 # and common options can be changed in the buildout sections at the top of
@@ -9,10 +9,9 @@
 #
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
 #
-# You can start the mysql server with bin/mysqld_safe_run_as_user or let supervisord 
-# do its job: bin/supervisord or  bin/supervisord -e debug -n to check that everything 
-# is fine. Supervisord is started by user crontab on reboot. There are more crontab 
-# entries for backups (end of file).
+# You can start the mysql server with sudo -u usrname bin/mysqld_safe_run_as_user or let supervisord 
+# do its job: bin/supervisord. Supervisord is started by the user crontab on reboot. There are more crontab 
+# entries for backups at the end of this file.
 # 
 # Install
 # ----------
@@ -25,11 +24,9 @@
 #    $ a2enmod suexec 
 #    $ a2enmod ssl
 #
-# To run the buildout, do the following as root:
-#    $ adduser ${userdata:name} --home ${buildout:directory}" 
-#    $ cd /var/www
-#    $ git clone git@github.com:joka/LAMP-buildout.git ${userdata:servername}
-#    $ cd ${userdata:servername}
+# To run the buildout do the following as root:
+#    $ git clone git@github.com:joka/LAMP-buildout.git buildout_dir
+#    $ cd buildout_dir
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
 #
@@ -38,23 +35,10 @@
 #
 # To make changes you can edit the options on top of this file and the config template files (./templates)
 # Then rerun the buildout part you have changed:
-#    $ bin/buildout -Nc buildout-common.cfg install 
+#    $ bin/buildout -Nc buildout-common.cfg install partname
 # You can change the config files directly (see part generated-config-files), but all changes are lost 
-# if you run buildout again.
-#
-# You should prefere extending this buildout to make custom changes:
-#    $ cat > buildout-productive.cfg << EOF
-#    $ [buildout]
-#    $ extends = buildout-common.cfg
-#    $ [userdata]
-#    $ name = test
-#    $ servername = test.de
-#    $ serveralias = www.test.de
-#    $ serveradmin = admin@test.de
-#    $ mysql_root_pwd = password
-#    $ EOF
-# Then run:
-#  $ bin/buildout -Nc buildout-productive.cfg  install  
+# if you run buildout again. To make custom changes you should extend this buildout.
+#                          
 
 [buildout]
 parts =
@@ -66,7 +50,6 @@ parts =
     mysql-bin
     mysql-admin
     userdirs
-    mysql_install_db
     yii
     omelette
     supervisor
@@ -75,6 +58,7 @@ parts =
     crontab_reboot                                                                               
     crontab_mysql_backup_daily                                                                          
     crontab_mysql_backup_weekly                                                                          
+    mysql_install_db
     vhost-install
 
 [userdata]
@@ -83,11 +67,11 @@ servername = localhost
 serveralias = localhost
 serveradmin = admin@test.de
 mysql_root_pwd = password
+mysql_database = ${userdata:name}
 ssl_cert = ${buildout:directory}/etc/${userdata:servername}.pem
 
 [ports] 
 mysql = 9003
-supervisor = 9002
 
 [install-paths] 
 vhosts =  /etc/apache2/sites-available
@@ -219,9 +203,7 @@ strip-top-level-dir = true
 [adduser]
 recipe = plone.recipe.command
 command =  
-	#add user:
-	echo "To add a new user run: adduser name --home ${buildout:directory}" 
-	adduser ${userdata:name}
+	adduser ${userdata:name} --home ${buildout:directory}
 	adduser www-data ${userdata:name}
 
 [vhost-install]  
@@ -243,10 +225,13 @@ command =
     chown -R ${userdata:name}:${userdata:name} ${buildout:directory}/var
     sudo -u  ${userdata:name} ${binaries:mysql}/mysql_install_db --datadir=${mycnf:datadir} --user=${userdata:name} --log=${buildout:directory}/logs
     echo "When you have problems mind appamor (ubuntu) and access rights."
-    echo "Installing mysql root password."
-    sudo -u ${userdata:name} ${buildout:directory}/bin/mysqld_safe_run_as_user &
-    ${buildout:directory}/bin/mysqladmin -u root password '${userdata:mysql_root_pwd}'
-    kill -TERM  $(cat ${buildout:directory}/var/mysql.pid)
+    echo ""
+    echo "The mysql root password is set if mysql is running. To start mysql run: ./bin/supervisord."
+    [ -f  ${mycnf:pid} ] &&  sudo -u ${userdata:name} ${buildout:directory}/bin/mysqladmin -u root password '${userdata:mysql_root_pwd}'
+    echo ""
+    echo "To create the database run:"
+    echo "sudo -u ${userdata:name} ${buildout:directory}/bin/mysql --user=root --password=${userdata:mysql_root_pwd} --execute='create database ${userdata:mysql_database};'"
+    echo ""
 update-command=${mysql_install_db:command}
 
 #Supervisor to start the mysql server
@@ -256,8 +241,6 @@ eggs = supervisor
 
 [supervisor]
 recipe = collective.recipe.supervisor
-port = localhost:${ports:supervisor}
-serverurl = http://localhost:${ports:supervisor}
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
     10 mysql ${supervisor:pp} [ ${mycnf:pid} ${binaries:mysql}/mysqld_safe ${mycnf:opt} ] true ${userdata:name}
