--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -9,7 +9,7 @@
 #
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
 #
-# You can start the mysql server with sudo -u usrname bin/mysqld_safe_run_as_user or let supervisord 
+# You can start the mysql server with sudo -u usrename bin/mysqld_safe_run_as_user or let supervisord 
 # do its job: bin/supervisord. Supervisord is started by the user crontab on reboot. There are more crontab 
 # entries for backups at the end of this file.
 # 
@@ -29,6 +29,9 @@
 #    $ cd buildout_dir
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
+#    # Start mysqld an rerun the buildout to set the database password
+#    $ bin/supervisord
+#    $ bin/buildout -Nc buildout-common.cfg
 #
 # Update
 # -------------
