--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -29,7 +29,7 @@
 #    $ cd buildout_dir
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
-#    # Start mysqld an rerun the buildout to set the database password
+#    # Start mysqld an rerun the buildout to set the mysql root password
 #    $ bin/supervisord
 #    $ bin/buildout -Nc buildout-common.cfg
 #
