--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -89,6 +89,7 @@ logrotate =  ${buildout:directory}/parts/logrotate.conf
 [binaries]
 mysql= /usr/bin
 php = /usr/bin
+php_modules = /usr/lib/php5/20090626
 
 ##############################################################################  
 # Config files 
@@ -172,7 +173,7 @@ stop-on-error = false
 command =  
 #make dirs
     mkdir -p ${buildout:directory}/etc
-    mkdir ${buildout:directory}/docs
+    mkdir ${buildout:directory}/htdocs
     mkdir ${buildout:directory}/logs
     mkdir ${buildout:directory}/tmp
     mkdir ${buildout:directory}/bin
@@ -184,6 +185,8 @@ command =
     chmod 550 /${buildout:directory}/etc
     chmod a+x /${buildout:directory}/bin/*
     chown ${userdata:name}:${userdata:name} ${buildout:directory}/etc/php.ini
+#take care supervisor pidproxy  is executalbe
+    chmod a+x ${supervisor:pp}
 #protect config files
     chmod 440 ${buildout:directory}/etc/php.ini
     chmod 440 ${buildout:directory}/etc/vhost.conf
@@ -195,7 +198,7 @@ update-command = ${userdirs:command}
 [yii]
 recipe = hexagonit.recipe.download
 url =  http://yii.googlecode.com/files/yii-1.1.7.r3135.tar.gz
-destination = ${buildout:directory}/docs
+destination = ${buildout:directory}/htdocs
 ignore-existing = true
 strip-top-level-dir = true
 
