--- a/templates/php-fcgi-starter.in
+++ b/templates/php-fcgi-starter.in
@@ -1,6 +1,6 @@
 #!/bin/sh
-PHPRC="/var/www/${buildout:directory}/etc/"
+PHPRC="${buildout:directory}/etc/"
 export PHPRC
-export TMPDIR=/var/www/${buildout:directory}/tmp 
+export TMPDIR=${buildout:directory}/tmp 
 exec /usr/bin/php5-cgi
 
