nicer mysql setup

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -9,7 +9,7 @@
 #
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
 #
-# You can start the mysql server with sudo -u usrename bin/mysqld_safe_run_as_user or let supervisord 
+# You can start the mysql server with sudo -u username bin/mysqld_safe_run_as_user or let supervisord 
 # do its job: bin/supervisord. Supervisord is started by the user crontab on reboot. There are more crontab 
 # entries for backups at the end of this file.
 # 
@@ -48,6 +48,7 @@ parts =
     adduser
     php-conf
     vhost-conf 
+    mycnf-conf
     fcgi-start
     mysqld_safe
     mysql-bin
@@ -68,7 +69,6 @@ parts =
 name = test
 servername = localhost
 serveralias = localhost
-serveradmin = admin@test.de
 mysql_root_pwd = password
 mysql_database = ${userdata:name}
 ssl_cert = ${buildout:directory}/etc/${userdata:servername}.pem
@@ -112,8 +112,13 @@ pid=${mycnf:datadir}/mysql.pid
 err = ${buildout:directory}/logs/mysql.err
 sock = ${mycnf:datadir}/mysql.sock
 user =  ${userdata:name}
-opt = --port=${ports:mysql} --pid-file=${mycnf:pid} --skip-syslog --log-error=${mycnf:err} --basedir=${mycnf:basedir} --datadir=${mycnf:datadir} --socket=${mycnf:sock} --user=${mycnf:user} 
+opt = --defaults-file=${mycnf-conf:output} --pid-file=${mycnf:pid} --skip-syslog  
 
+[mycnf-conf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/templates/my.cnf.in
+output = ${buildout:directory}/etc/my.cnf
+ 
 [automysqlbackup-conf]
 recipe = collective.recipe.template
 input = ${buildout:directory}/templates/automysqlbackup.conf.in
@@ -190,7 +195,11 @@ command =
 #protect config files
     chmod 440 ${buildout:directory}/etc/php.ini
     chmod 440 ${buildout:directory}/etc/vhost.conf
+    chmod 440 ${buildout:directory}/etc/my.cnf
+    chmod 440 ${buildout:directory}/etc/automysqlbackup.conf
+    chmod 660 ${buildout:directory}/*.cfg
     chattr -i -V ${buildout:directory}/bin/php-fcgi-starter
+    chown ${userdata:name}:${userdata:name} ${buildout:directory}/etc/my.cnf
     chown ${userdata:name}:${userdata:name} ${buildout:directory}/bin/php-fcgi-starter
     chattr +i -V ${buildout:directory}/bin/php-fcgi-starter
 update-command = ${userdirs:command}
@@ -198,7 +207,7 @@ update-command = ${userdirs:command}
 [yii]
 recipe = hexagonit.recipe.download
 url =  http://yii.googlecode.com/files/yii-1.1.7.r3135.tar.gz
-destination = ${buildout:directory}/htdocs
+destination = ${buildout:directory}/var/lib
 ignore-existing = true
 strip-top-level-dir = true
 
@@ -230,13 +239,12 @@ recipe = plone.recipe.command
 command = 
     chown -R ${userdata:name}:${userdata:name} ${buildout:directory}/var
     sudo -u  ${userdata:name} ${binaries:mysql}/mysql_install_db --datadir=${mycnf:datadir} --user=${userdata:name} --log=${buildout:directory}/logs
-    echo "When you have problems mind appamor (ubuntu) and access rights."
+    echo "---------------------------------------------------------------------"
+    echo "When you have problems running mysqld mind appamor and access rights."
     echo ""
-    echo "The mysql root password is set if mysql is running. To start mysql run: ./bin/supervisord."
-    [ -f  ${mycnf:pid} ] &&  sudo -u ${userdata:name} ${buildout:directory}/bin/mysqladmin -u root password '${userdata:mysql_root_pwd}'
-    echo ""
-    echo "To create the database run:"
-    echo "sudo -u ${userdata:name} ${buildout:directory}/bin/mysql --user=root --password=${userdata:mysql_root_pwd} --execute='create database ${userdata:mysql_database};'"
+    echo "The mysql database and the root password is set if mysql is running. To start mysql run: ./bin/supervisord."
+    [ -f  ${mycnf:pid} ] &&  ${buildout:directory}/bin/mysqladmin password '${userdata:mysql_root_pwd}'
+    [ -f  ${mycnf:pid} ] &&  ${buildout:directory}/bin/mysqladmin create '${userdata:mysql_database}'
     echo ""
 update-command=${mysql_install_db:command}
 
