--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -107,7 +107,7 @@ output = ${buildout:directory}/etc/vhost.conf
 
 [mycnf]
 basedir= /usr
-datadir=${buildout:directory}/var
+datadir=${buildout:directory}/vor
 pid=${mycnf:datadir}/mysql.pid
 err = ${buildout:directory}/logs/mysql.err
 sock = ${mycnf:datadir}/mysql.sock
@@ -293,5 +293,46 @@ command = ${buildout:directory}/bin/automysqlbackup -c ${buildout:directory}/etc
 #times = 5 0 * * *                                                                              
 #command = rsync -a ${buildout:directory}/var/blobstorage ${buildout:directory}/var/blobbackup 
 
+##############################################################################  
+# Log rotation
+##############################################################################
+# The log rotation configuration file is in parts/logrotate.conf and this needs to be symlinked into the
+# main logrotate configuration.    
+
+[logrotate_conf]
+recipe = zc.recipe.deployment:configuration
+text = 
+
+create 640 ${userdata:name} root
+compress 
+sharedscripts
+missingok 
+
+${buildout:directory}/logs/mysql-error.log ${buildout:directory}/logs/mysql-slow.log ${buildout:directory}/logs/mysql.log {
+    daily
+    rotate 7
+    postrotate
+        test -x ${buildout:directory}/bin/mysqladmin || exit 0
+        if [ -z "`${buildout:directory}/bin/mysqladmin ping 2>/dev/null`" ]; then
+          if killall -q -s0 -umysql mysqld; then
+            exit 1
+          fi 
+        else
+          ${buildout:directory}/bin/mysqladmin flush-logs
+        fi
+    endscript
+}
+
+${buildout:directory}/logs/error.log ${buildout:directory}/logs/access.log {
+    weekly
+    rotate 52
+    delaycompress
+    notifempty
+    postrotate
+        if [ -f "`. /etc/apache2/envvars ; echo ${APACHE_PID_FILE:-/var/run/apache2.pid}`" ]; then
+            /etc/init.d/apache2 reload > /dev/null
+        fi
+    endscript
+}
 
 
