--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -62,6 +62,7 @@ parts =
     crontab_reboot                                                                               
     crontab_mysql_backup_daily                                                                          
     crontab_mysql_backup_weekly                                                                          
+    logrotate_conf
     mysql_install_db
     vhost-install
 
@@ -302,37 +303,34 @@ command = ${buildout:directory}/bin/automysqlbackup -c ${buildout:directory}/etc
 [logrotate_conf]
 recipe = zc.recipe.deployment:configuration
 text = 
+    create 640 ${userdata:name} root
+    compress 
+    sharedscripts
+    missingok 
 
-create 640 ${userdata:name} root
-compress 
-sharedscripts
-missingok 
+    ${buildout:directory}/logs/mysql-error.log ${buildout:directory}/logs/mysql-slow.log ${buildout:directory}/logs/mysql.log {
+        daily
+        rotate 7
+        postrotate
+            test -x ${buildout:directory}/bin/mysqladmin || exit 0
+            if [ -z "`${buildout:directory}/bin/mysqladmin ping 2>/dev/null`" ]; then
+              if killall -q -s0 -umysql mysqld; then
+                exit 1
+              fi 
+            else
+              ${buildout:directory}/bin/mysqladmin flush-logs
+            fi
+        endscript
+    }
 
-${buildout:directory}/logs/mysql-error.log ${buildout:directory}/logs/mysql-slow.log ${buildout:directory}/logs/mysql.log {
-    daily
-    rotate 7
-    postrotate
-        test -x ${buildout:directory}/bin/mysqladmin || exit 0
-        if [ -z "`${buildout:directory}/bin/mysqladmin ping 2>/dev/null`" ]; then
-          if killall -q -s0 -umysql mysqld; then
-            exit 1
-          fi 
-        else
-          ${buildout:directory}/bin/mysqladmin flush-logs
-        fi
-    endscript
-}
-
-${buildout:directory}/logs/error.log ${buildout:directory}/logs/access.log {
-    weekly
-    rotate 52
-    delaycompress
-    notifempty
-    postrotate
-        if [ -f "`. /etc/apache2/envvars ; echo ${APACHE_PID_FILE:-/var/run/apache2.pid}`" ]; then
+    ${buildout:directory}/logs/error.log ${buildout:directory}/logs/access.log {
+        weekly
+        rotate 52
+        delaycompress
+        notifempty
+        postrotate
             /etc/init.d/apache2 reload > /dev/null
-        fi
-    endscript
-}
+        endscript
+    }
 
 
