--- a/templates/vhost.conf.in
+++ b/templates/vhost.conf.in
@@ -8,9 +8,6 @@
 
 </VirtualHost>
 
-
-</VirtualHost>
-
 <VirtualHost *:443>
     ServerName  ${userdata:servername}
     ServerAlias ${userdata:serveralias}
@@ -28,7 +25,17 @@
 
     <Directory "${buildout:directory}/htdocs">
         Options -Indexes MultiViews FollowSymLinks +ExecCGI
+        
         FCGIWrapper ${buildout:directory}/bin/php-fcgi-starter .php
+       
+        RewriteEngine on
+        # yii rewrite settings:
+        # if a directory or a file exists, use it directly
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        # otherwise forward it to index.php
+        RewriteRule . index.php
+
         Order allow,deny
         allow from all
     </Directory>
