--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -111,7 +111,7 @@ output = ${buildout:directory}/etc/vhost.conf
 
 [mycnf]
 basedir= /usr
-datadir=${buildout:directory}/vor
+datadir=${buildout:directory}/var
 pid=${mycnf:datadir}/mysql.pid
 err = ${buildout:directory}/logs/mysql.err
 sock = ${mycnf:datadir}/mysql.sock
