added database name to my.cnf

--- a/templates/my.cnf.in
+++ b/templates/my.cnf.in
@@ -64,6 +64,7 @@ max_allowed_packet	= 16M
 
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completition
+database = ${userdata:mysql_database}
  
 [isamchk]
 #key_buffer		= 16M
