my.cnf mysql password

--- a/templates/my.cnf.in
+++ b/templates/my.cnf.in
@@ -66,6 +66,7 @@ max_allowed_packet	= 16M
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completition
 database = ${userdata:mysql_database}
+password = "${userdata:mysql_root_pwd}"
 socket		= ${mycnf:sock}
  
 [isamchk]
