--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -79,6 +79,7 @@ ssl_cert = ${buildout:directory}/etc/${userdata:servername}.pem
 
 [ports] 
 mysql = 9003
+supervisor = 9010
 
 [install-paths] 
 vhosts =  /etc/apache2/sites-available
@@ -259,6 +260,9 @@ eggs = supervisor
 
 [supervisor]
 recipe = collective.recipe.supervisor
+port = 127.0.0.1:${ports:supervisor}
+user = super
+password = super_pwd
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
     10 mysql ${supervisor:pp} [ ${mycnf:pid} ${binaries:mysql}/mysqld_safe ${mycnf:opt} ] true ${userdata:name}
