out run create ssl cert

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -56,10 +56,10 @@ parts =
     mysqld_safe
     mysql-bin
     mysql-admin
+    omelette
+    supervisor 
     userdirs
 #    yii
-    omelette
-    supervisor
     automysqlbackup-conf
     automysqlbackup
     crontab_reboot                                                                               
@@ -230,11 +230,10 @@ command =
 recipe = plone.recipe.command
 command = 
     ln -s ${buildout:directory}/etc/vhost.conf ${install-paths:vhosts}/${userdata:servername}
+# Activate apache vhost conf
     a2ensite ${userdata:servername}
-    echo
-    echo "To install a self-certified root certificat please run:"
-    echo /usr/sbin/make-ssl-cert /usr/share/ssl-cert/ssleay.cnf ${userdata:ssl_cert}
-    echo
+# We install now a self-certified root certificat. If you don't wan't to hit cancel.
+    /usr/sbin/make-ssl-cert /usr/share/ssl-cert/ssleay.cnf ${userdata:ssl_cert}
 location = 
 	${install-paths:vhosts}/${userdata:servername}
 	${install-paths:vhosts_enabled}/${userdata:servername}
