autostart supervisor to set up the mysql database

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -246,8 +246,9 @@ command =
     echo "---------------------------------------------------------------------"
     echo "When you have problems running mysqld mind appamor and access rights."
     echo ""
-    echo "The mysql database and the root password is set if mysql is running. To start mysql run: ./bin/supervisord."
-    [ -f  ${mycnf:pid} ] &&  ${buildout:directory}/bin/mysqladmin password '${userdata:mysql_root_pwd}'
+    echo "Starting superpervisor/mysqld to set up password and create database."
+    [ ! -f ./var/supervisord.pid ] && ./bin/supervisord 
+    [ -f  ${mycnf:pid} ] &&  ${binaries:mysql}/mysqladmin --socket=${mycnf:sock} password '${userdata:mysql_root_pwd}'
     [ -f  ${mycnf:pid} ] &&  ${buildout:directory}/bin/mysqladmin create '${userdata:mysql_database}'
     echo ""
 update-command=${mysql_install_db:command}
