--- a/templates/my.cnf.in
+++ b/templates/my.cnf.in
@@ -65,6 +65,7 @@ max_allowed_packet	= 16M
 
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completition
+user = root
 database = ${userdata:mysql_database}
 password = "${userdata:mysql_root_pwd}"
 socket		= ${mycnf:sock}
