fix setting mysql password

--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -247,8 +247,8 @@ command =
     echo "When you have problems running mysqld mind appamor and access rights."
     echo ""
     echo "Starting superpervisor/mysqld to set up password and create database."
-    [ ! -f ./var/supervisord.pid ] && ./bin/supervisord 
-    [ -f  ${mycnf:pid} ] &&  ${binaries:mysql}/mysqladmin --socket=${mycnf:sock} password '${userdata:mysql_root_pwd}'
+    [ ! -f ./var/supervisord.pid ] && ./bin/supervisord  && sleep 5
+    [ -f  ${mycnf:pid} ] &&  ${binaries:mysql}/mysqladmin --socket=${mycnf:sock} -u root password "${userdata:mysql_root_pwd}"
     [ -f  ${mycnf:pid} ] &&  ${buildout:directory}/bin/mysqladmin create '${userdata:mysql_database}'
     echo ""
 update-command=${mysql_install_db:command}
