--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -8,10 +8,8 @@
 # of this file.
 #
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
-#
-# You can start the mysql server with sudo -u username bin/mysqld_safe_run_as_user or let supervisord 
-# do its job: bin/supervisord. Supervisord is started by the user crontab on reboot. There are more crontab 
-# entries for backups at the end of this file.
+# Supervisord is staret to run the mysql server. You can manually start the mysql server with sudo -u username bin/mysqld_safe_run_as_user.
+# On reboot supervisord is started by the users crontab. There are more crontab entries for backups at the end of this file.
 #
 # The log rotation configuration file is in parts/logrotate.conf and this needs to be symlinked into the
 # main logrotate configuration.    
@@ -32,9 +30,8 @@
 #    $ cd buildout_dir
 #    $ python bootstrap.py
 #    $ bin/buildout -c buildout-common.cfg
-#    # Start mysqld an rerun the buildout to set the mysql root password
-#    $ bin/supervisord
-#    $ bin/buildout -Nc buildout-common.cfg
+# To stop mysql run:
+#    $ bin/supervisorctl stop mysql
 #
 # Update
 # -------------
