--- a/buildout-common.cfg
+++ b/buildout-common.cfg
@@ -7,6 +7,8 @@
 # and common options can be changed in the buildout sections at the top of
 # of this file.
 #
+# Apparmor users (ubuntu): mind adding the new mysql database path.
+#
 # The virtual host config is linked to /etc/apache2/sites-available and enabled.
 # Supervisord is staret to run the mysql server. You can manually start the mysql server with sudo -u username bin/mysqld_safe_run_as_user.
 # On reboot supervisord is started by the users crontab. There are more crontab entries for backups at the end of this file.
@@ -26,6 +28,7 @@
 #    $ a2enmod ssl
 #
 # To run the buildout do the following as root:
+#    $ cd /var/www
 #    $ git clone git@github.com:joka/LAMP-buildout.git buildout_dir
 #    $ cd buildout_dir
 #    $ python bootstrap.py
@@ -70,6 +73,7 @@ parts =
 name = test
 servername = localhost
 serveralias = localhost
+serveradmin = admin@test.de
 mysql_root_pwd = password
 mysql_database = ${userdata:name}
 ssl_cert = ${buildout:directory}/etc/${userdata:servername}.pem
