--- a/templates/php.ini.in
+++ b/templates/php.ini.in
@@ -257,7 +257,7 @@ open_basedir = ${buildout:directory}/htdocs/:${buildout:directory}/tmp/:${buildo
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
-disable_functions =
+disable_functions =  exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names. This directive is
