--- a/adduser.cfg
+++ b/adduser.cfg
@@ -6,10 +6,14 @@
 
 parts =
      adduser
- 
+
+[userdata]
+name = testuser
+group = testuser
+
 [adduser]
 recipe = plone.recipe.command
 command =  
-	adduser ${userdata:name} --home ${buildout:directory}
+    useradd -s /bin/false -d  ${buildout:directory} ${userdata:name}
 	adduser ${userdata:apache_user_name} ${userdata:name}
  
